cabal-version: 2.2
name:
  us-weather-history
version:
  0.1
synopsis:
  us weather history data
description:
  us weather history data
homepage:
  https://github.com/chessai/us-weather-history
bug-reports:
  https://github.com/chessai/us-weather-history/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data, Utility
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.5

library
  hs-source-dirs:
    src
  exposed-modules:
    UsWeatherHistory
  build-depends:
    , base >= 4.11 && < 4.14
    , colonnade >= 1.2 && < 1.3
    , siphon >= 0.8 &&
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/us-weather-history.git
